<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/TemperatureConversionHeading"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/temperaturelabel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/entertemp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/conversion"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/textViewConvertedTemperature"
        android:layout_width="219dp"
        android:layout_height="27dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTemperature" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/selectconversion"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RadioGroup
        android:id="@+id/radioGroupConversion"
        android:layout_width="253dp"
        android:layout_height="92dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
            android:id="@+id/radioButtonCtoF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctof" />

        <RadioButton
            android:id="@+id/radioButtonFtoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftoc" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="52dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupConversion" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="52dp"
        android:onClick="onCalculateClick"
        android:text="@string/calculate"
        app:layout_constraintStart_toEndOf="@+id/buttonReset"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupConversion" />


</androidx.constraintlayout.widget.ConstraintLayout>